@@ -8,6 +8,7 @@
 *** Removed
 + *tetragono*: Remove SIGINT handle in gradient descent.
 *** Fixed
++ *tetragono*: Fix the import issue in tetragono.
 
 ** [[https://github.com/USTC-TNS/TNSP/compare/v0.3.15...v0.3.16][v0.3.16]] - 2024-03-20
 
